# gscreenshot

./: .gitignore  Doxyfile  MANIFEST.in  PKGBUILD  ProjectHome.md  README.md  annotated.html  classes.html  classgscreenshot_1_1FileSaveHandler-members.html  classgscreenshot_1_1FileSaveHandler.html  classgscreenshot_1_1Scrot-members.html  classgscreenshot_1_1Scrot.html  classgscreenshot_1_1main__window-members.html  classgscreenshot_1_1main__window.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_91af1f75691b6887b342e62bb144a86a.html  dir_abe3accc3a0e9a765c3e70fe121bcecd.html  dir_aeb579d998e8a4064bd580b3fd6ad492.html  dir_ca2fc148ef7d34bf36f2dd11dc561e8c.html  functions.html  functions_func.html  gscreenshot  gscreenshot.py  hierarchy.html  index.html  pylint.yml  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pr.yml  pre-release.yml
gscreenshot_about/: gscreenshot_about.glade
gscreenshot_main/: gscreenshot_main.glade
gscreenshot_replace/: gscreenshot_replace.glade
gscreenshot_saveDialog/: saveas.glade
search/: all_0.js  all_3.js  classes_2.js  functions_0.js  pages_0.js  searchdata.js
specs/: gscreenshot-dev.spec  gscreenshot.spec
src/: .coverage
src/gscreenshot/: __init__.py  actions.py  cache.py  compat.py  filename.py  meta.py  util.py
src/gscreenshot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gscreenshot/cursor_locator/: __init__.py  cursor_locator.py  factory.py  gtk_cursor_locator.py  x11_cursor_locator.py
src/gscreenshot/frontend/: __init__.py  abstract_view.py  args.py  cli.py  gtk.py  presenter.py
src/gscreenshot/frontend/cli/: __init__.py  args.py  main.py  view.py
src/gscreenshot/frontend/gtk/: __init__.py  dialogs.py  main.py  presenter.py  util.py  view.py
src/gscreenshot/scaling/: __init__.py  scaling_factor.py
src/gscreenshot/screenshooter/: __init__.py  exceptions.py  factory.py  grim.py  imagemagick.py  imlib_2.py  pil.py  screenshooter.py  scrot.py  xdg_desktop_portal.py
src/gscreenshot/screenshot/: __init__.py  screenshot.py  screenshot_collection.py
src/gscreenshot/selector/: __init__.py  exceptions.py  factory.py  gscreenshot_x_select.py  region_selector.py  slop.py  slurp.py
test/gscreenshot/: test_gscreenshot.py
test/gscreenshot/frontend/: test_cli.py  test_gtk_presenter.py
test/gscreenshot/screenshooter/: test_screenshooter.py
test/gscreenshot/screenshot/: test_screenshot.py
test/gscreenshot/selector/: test_selector.py
(+23 files in other folders)
